--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,3 +1,5 @@
+= flash[:error] if flash[:error]
+
 %h1 Create A New User Account
 = form_for @user, url: {action: "create"}, html: {class:"submit_item_form"} do |f|
   = f.label :username, "Username"
