--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,5 +19,8 @@
           %a{:href => "/sessions/new"} Log In
         %li
           %a{:href => "/users/new"} Register
+  %div
+    - flash.each do |name, msg|
+      = content_tag :div, msg, class: name
   %main
     = yield
