--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,4 +1,3 @@
-= flash[:error] if flash[:error]
 
 %h1 Create A New User Account
 = form_for @user, url: {action: "create"}, html: {class:"submit_item_form"} do |f|
@@ -6,8 +5,8 @@
   = f.text_field :username
   = f.label :email, "E-mail"
   = f.email_field :email
-  = f.label :password_hash, "Password"
-  = f.password_field :password_hash
+  = f.label :password, "Password"
+  = f.password_field :password
 
   = f.submit "Create User"
 
