pre-commit before styling

--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -1,12 +1,11 @@
 %h1 Categories Index Page
 %p Click on a category's title to see all of the Items in that Category:
 - @categories.each do |category|
-  - unless category.items.nil?
-    %h3= link_to category.name, category_path(category)
-    %h5= "Find something cool like this in the #{category.name} department"
-    = image_tag category.items.first.picture_link
-    = category.items.first.title
-    %br/
-    \--------------------------
-    %br/
+  .col-md-4
+    .item-boxxx
+      %h3= link_to category.name, category_path(category)
+      %h5= "Find something cool like this in the #{category.name} department"
+      = image_tag category.items.first.picture_link
+      = category.items.first.title
 
+= link_to 'Back to Home Page', items_path
