--- a/app/assets/stylesheets/categories.css
+++ b/app/assets/stylesheets/categories.css
@@ -2,3 +2,14 @@
   Place all the styles related to the matching controller here.
   They will automatically be included in application.css.
 */
+
+
+.img-circle {
+  background-color: #6bb9f0;
+}
+
+.item-boxxx {
+  border: solid 2px green;
+  height: 350px;
+  padding: 10px;
+}
