add check for Admin status of User

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -49,6 +49,19 @@ div.item-box div {
   font-weight: 600;
 }
 
+.img-circle {
+  background-color: #6bb9f0;
+}
 
+.nav {
 
+}
+
+.nav-pills {
+
+}
+
+.nav-stacked {
+
+}
 
