--- a/app/assets/stylesheets/categories.css
+++ b/app/assets/stylesheets/categories.css
@@ -4,12 +4,12 @@
 */
 
 
-.img-circle {
-  background-color: #6bb9f0;
-}
 
-.item-boxxx {
+
+.item-box2 {
   border: solid 2px green;
   height: 350px;
   padding: 10px;
+
 }
+
