--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -3,7 +3,7 @@
   %h3
     Item For Sale: #{@item.title}
   %p
-    %img{:alt => "Buy this thing", :height => "200", :src => @item.picture_link, :width => "200"}
+    %img{:alt => "Buy this thing", :height => "200", :src => @item.picture_link, :width => "200", :class => "img-circle"}
   %p
     About: #{@item.description}
   %p
