--- a/app/views/admin/items/new.html.haml
+++ b/app/views/admin/items/new.html.haml
@@ -17,3 +17,7 @@
       = f.label :quantity
       = f.number_field :quantity
     = f.submit "Submit Your Item For Sale"
+
+= link_to 'Back to Home Page', items_path
+%br/
+= link_to 'Return to Inventory mangement', admin_items_path
