--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
     = csrf_meta_tags
 %body
   %nav
-    - if session[:id] != nil #logged_in?
+    - if session[:id] != nil #logged_in helper won't work here!
       %ul.nav.nav-pills.nav-stacked
         %li
           = link_to "Log out", logout_path, method: :delete
@@ -19,6 +19,10 @@
           %a{:href => "/sessions/new"} Log In
         %li
           %a{:href => "/users/new"} Register
+    - if session[:id] && session[:id] == 2 #so brittle! won't allow any other Admin with this check ...
+      %ul.nav.nav-pills.nav-stacked
+        %li
+          = link_to "Manage Inventory", admin_items_path
   %div
     - flash.each do |name, msg|
       = content_tag :div, msg, class: name
