--- a/app/views/admin/items/index.html.haml
+++ b/app/views/admin/items/index.html.haml
@@ -22,3 +22,6 @@
             = link_to 'Edit item', edit_admin_item_path(item.id), :class => "btn btn-primary"
           %td
             = link_to 'Delete item', admin_item_path(item.id), method: :delete, :class => "btn btn-danger"
+
+
+= link_to 'Back to Home Page', items_path
