--- a/app/views/admin/items/edit.html.haml
+++ b/app/views/admin/items/edit.html.haml
@@ -17,6 +17,11 @@
       = f.label :quantity
       = f.number_field :quantity, class: 'form-control'
     %fieldset.form-group
-      = f.label :categories
-      = f.select :categories, @array, :prompt => 'Select One'
+      %p.text-center= f.label :categories
+      - @categories.each do |category|
+        - if @item.has_category?(category)
+          %input{name: "category[#{category.id}]", type: "checkbox", value: "checked", checked: "" }
+        - else
+          %input{name: "category[#{category.id}]", type: "checkbox", value: "checked"}
+        = category.name
     = f.submit(value: "Update Your Item", class: "btn btn-primary")
