--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -14,6 +14,11 @@
       = category.name
   %p.price
     $#{@item.price}
+  %form{:action => "create"}
+    Quantity you want to order:
+    %input{:max => "#{@item.quantity}", :min => "1", :name => "quantity", :type => "number"}
+    %input{:type => "hidden", :value => @item.id, :name => "item_id"}
+      %input{:type => "submit", :value => 'Add to Cart'}
 
 = link_to 'Back to Home Page', items_path
 
