--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,9 @@
         %ul.nav.nav-pills.nav-stacked
           %li
             = link_to "Log out", logout_path, method: :delete
+          %li
+            %a{:href => "/orders/show"}
+              %span.glyphicon.glyphicon-shopping-cart
       - else
         %ul.nav.nav-pills.nav-stacked
           %li
