user can delete items from shopping cart

--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -3,7 +3,7 @@
 %p Look at all of the Items in this Category
 
 - @category.items.each do |item|
-  %h3= item.title
+  %h3= link_to item.title, item_path(item)
   %p
     %img{:alt => "Buy this thing", :height => "200", :src => item.picture_link, :width => "200", :class => "img-circle"}
   %p= "You can have this for the low, low price of #{item.price} dollars!"
