--- a/app/views/orders/show.html.haml
+++ b/app/views/orders/show.html.haml
@@ -12,6 +12,7 @@
         Quantity #{purchased_item.quantity}
       %p
         Price: #{purchased_item.item.price}
+      %p= link_to 'Edit this Item', edit_purchased_item_path(purchased_item)
       %p= link_to 'Remove all of this Item', purchased_item_path(purchased_item),
         method: :delete,
         data: { confirm: 'Are you sure?' }
